ispCP ω 1.0.3 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-09-25 Christian Hernmarck
	- GUI:
		* Fixed Bug: error in counting subdom-aliases

2009-09-24 Benedikt Heintel
	- GUI:
		* Fixed #2006: Delete manual DNS entry on domain aliases

2009-09-24 Laurent Declercq
	- TOOLS:
		* Integrating new theme for squirrelmail (Thank to Henriks)

2009-09-23 Benedikt Heintel
	- GUI:
		* Fixed #2001: subdomain: hostname length need >= 2 chars
		* Fixed #2004: PHP Error multilanguage.php on line 54
		* Fixed #1979: Domain Alias Redirect
		* Function documentation and small fixes

2009-09-23 Laurent Declercq
	- GUI:
		* Small fixes (cleanup regexp in input-checks.php)

2009-09-23 Daniel Andreca
	- ENGINE:
		* Fixed #1947: ispcp-uninstall don't remove complete ispCp

2009-09-22 Laurent Declercq
	- GUI:
		* Fixed #1989: Failed database updates are silently ignored
		* Fixed #2000: Wrong default value for 'USER_INITAL_LANG' configuration variable
			- Added a new db databaseUpdate (25) to fix the 'user_gui_props.lang' value ('lang_EnglishBritain' instead of 'lang_English')
		* Small fixes
		* Uninitialized variable ($backup) in "client/hosting_plan_update.php"

2009-09-21 Laurent Declercq
	- DOCS:
		* Fixed #1997: Removed "perl-HTML-Entities" in OpenSuSE packages lists because the module "HTML::Entities" is
		  provided by the package perl-HTML-Parser. The package perl-HTML-Entities in itself does not exist.

2009-09-20 Laurent Declercq
	- GUI:
		* Fixed #1985: Several problems with the fixes related to #1971 and #1980 ( Introduced in r1986 )
			- Moved db criticalUpdate 4 && 5 to db databaseUpdate (because the criticalUpdate is performed before)
			- Added databaseUpdate 24 for the following database fixes:
				- Added fix for possible missing of backup property in "hosting_plan.props"
				- Added fix for possible inversion between backup and dns properties in "hosting_plan.props"