@@ -69,32 +69,45 @@ if (isset($_GET['edit_id']) && $_GET['edit_id'] !== '') {
 	if (empty($alias_id)) {
 		$query = "
 			UPDATE
-				`domain`,
-		    		`subdomain`
+				`domain`
 			SET
-				`domain`.`domain_status` = ?,
-				`subdomain`.`subdomain_status` = ?
-
+				`domain`.`domain_status` = ?
 			WHERE
-				`domain`.`domain_id` = ?
-			AND	`domain`.`domain_id` = subdomain.domain_id";
-
-		exec_query($sql, $query, array(Config::get('ITEM_CHANGE_STATUS'), Config::get('ITEM_CHANGE_STATUS'), $dmn_id));
-	} else{
+   				`domain`.`domain_id` = ?
+  			";
+		exec_query($sql, $query, array(Config::get('ITEM_CHANGE_STATUS'), $dmn_id));
 		$query = "
-			UPDATE
-				 `domain_aliasses`
-				,`subdomain_alias`
-			SET
-				 `domain_aliasses`.`alias_status` = ?
-				 ,`subdomain_alias`.`subdomain_alias_status` = ?
-			WHERE
-				`domain_aliasses`.`alias_id` = subdomain_alias.alias_id
-			AND	`domain_aliasses`.`domain_id` = ?
-			AND	`domain_aliasses`.`alias_id` = ?";
-
-		exec_query($sql, $query, array(Config::get('ITEM_CHANGE_STATUS'), Config::get('ITEM_CHANGE_STATUS'), $dmn_id, $rs->fields['alias_id']));
+				UPDATE
+					`subdomain`
+				SET
+    				`subdomain`.`subdomain_status` = ?
+    			WHERE
+    				`subdomain`.`domain_id` = ?
+				";
+		exec_query($sql, $query, array(Config::get('ITEM_CHANGE_STATUS'), $dmn_id));
+	} else {
+		$query = "
+ 				UPDATE
+ 					`domain_aliasses`
+				SET
+					`domain_aliasses`.`alias_status` = ?
+ 				WHERE
+					`domain_aliasses`.`domain_id` = ?
+				AND	`domain_aliasses`.`alias_id` = ?
+			";
+		exec_query($sql, $query, array(Config::get('ITEM_CHANGE_STATUS'), $dmn_id, $alias_id));
+			
+		$query = "
+ 				UPDATE
+					`subdomain_alias`
+ 				SET
+					`subdomain_alias`.`subdomain_alias_status` = ?
+ 				WHERE
+					`subdomain_alias`.`alias_id` = ?
+			";
+		exec_query($sql, $query, array(Config::get('ITEM_CHANGE_STATUS'), $alias_id));
 	}
+
 	send_request();
 
 	write_log($_SESSION['user_logged'] . ': deletes dns zone record: ' . $dns_name . ' of domain ' . $dom_name);
