@@ -240,7 +240,7 @@ function gen_editdns_page(&$tpl, $edit_id) {
 			FROM
 				`domain`
 			WHERE
-				`domain_id` = ?
+				`domain_id` = :domain_id
 			UNION
 			SELECT
 				`domain_aliasses`.`alias_id`,
@@ -248,10 +248,11 @@ function gen_editdns_page(&$tpl, $edit_id) {
 			FROM
 				`domain_aliasses`
 			WHERE
-				`domain_aliasses`.`domain_id` = ?
+				`domain_aliasses`.`domain_id` = :domain_id
+			AND `alias_status` <> :state
 		";
 
-		$res = exec_query($sql, $query, array($dmn_id, $dmn_id));
+		$res = exec_query($sql, $query, array('domain_id'=>$dmn_id,'state'=>Config::get('ITEM_ORDERED_STATUS')));
 		$sel = '';
 		while ($row = $res->FetchRow()) {
 			$sel.= '<option value="'.$row['alias_id'].'">'.$row['domain_name'].'</option>';
@@ -572,30 +573,45 @@ function check_fwd_data(&$tpl, $edit_id) {
 		if (empty($alias_id)) {
 			$query = "
 				UPDATE
-					`domain`,
-			    		`subdomain`
+					`domain`
  				SET
-					 `domain`.`domain_status` = ?,
-    					`subdomain`.`subdomain_status` = ?
+					 `domain`.`domain_status` = ?
  				WHERE
     					`domain`.`domain_id` = ?
-   				AND	`domain`.`domain_id` = subdomain.domain_id";
-			exec_query($sql, $query, array(Config::get('ITEM_CHANGE_STATUS'), Config::get('ITEM_CHANGE_STATUS'), $dmn_id));
+   			";
+			exec_query($sql, $query, array(Config::get('ITEM_CHANGE_STATUS'), $dmn_id));
+			$query = "
+				UPDATE
+					`subdomain`
+				SET
+    				`subdomain`.`subdomain_status` = ?
+    			WHERE
+    				`subdomain`.`domain_id` = ?
+				";
+			exec_query($sql, $query, array(Config::get('ITEM_CHANGE_STATUS'), $dmn_id));
 		} else {
 			$query = "
  				UPDATE
- 					`domain_aliasses`,
+ 					`domain_aliasses`
+				SET
+					`domain_aliasses`.`alias_status` = ?
+ 				WHERE
+					`domain_aliasses`.`domain_id` = ?
+				AND	`domain_aliasses`.`alias_id` = ?
+			";
+			exec_query($sql, $query, array(Config::get('ITEM_CHANGE_STATUS'), $dmn_id, $alias_id));
+			
+			$query = "
+ 				UPDATE
 					`subdomain_alias`
  				SET
-					`domain_aliasses`.`alias_status` = ?,
 					`subdomain_alias`.`subdomain_alias_status` = ?
  				WHERE
-					`domain_aliasses`.`alias_id` = subdomain_alias.alias_id
-				AND	`domain_aliasses`.`domain_id` = ?
-				AND	`domain_aliasses`.`alias_id` = ?";
-			exec_query($sql, $query, array(Config::get('ITEM_CHANGE_STATUS'), Config::get('ITEM_CHANGE_STATUS'), $dmn_id, $alias_id));
+					`subdomain_alias`.`alias_id` = ?
+			";
+			exec_query($sql, $query, array(Config::get('ITEM_CHANGE_STATUS'), $alias_id));
 		}
-
+		
 		send_request();
 
 		$admin_login = $_SESSION['user_logged'];
